# jpfss

./: CMakeCache.txt  CMakeLists.txt  Makefile  Templates.cpp  Templates.h  cmake_install.cmake  learning-cpp.cbp  learning-cpp.layout  learning-cpp.project  learning-cpp.workspace
.codelite/: learning-cpp-jpfss.tags  learning-cpp.session
src/add/: add.cpp
src/basis/: Abstraction.cpp  Abstraction.h  Arrays.cpp  Arrays.h  Box.cpp  Box.h  CGI.cpp  CGI.h  Clazz.cpp  Clazz.h  Constants.cpp  Constants.h  Datatype.cpp  Datatype.h  DateTime.cpp  DateTime.h  Decisions.cpp  Decisions.h  Encapsulation.cpp  Encapsulation.h  Exceptions.cpp  Exceptions.h  Func.cpp  Func.h  IO.cpp  IO.h  LoopTypes.cpp  LoopTypes.h  Memory.cpp  Memory.h  ModifierTypes.cpp  ModifierTypes.h  Namespaces.cpp  Namespaces.h  Numbers.cpp  Numbers.h  Operators.cpp  Operators.h  PaintCost.cpp  PaintCost.h  (+28 more)
src/main/: main.cpp
